Style updates to fix mobile overlap and spacing

--- a/assets/css/scss/layout/_buttons.scss
+++ b/assets/css/scss/layout/_buttons.scss
@@ -3,12 +3,14 @@
 	border: none;
 	font-size: ($font-size-base - 1);
 	letter-spacing: 3px;
-	line-height: 24px;
+	// line-height: 24px; nu_edit
+	line-height: 16px;
 	padding: 2px 10px;
 	text-decoration: none;
 	text-transform: uppercase;
 	@include sans-bold;
 	@include transition(.3s);
+	white-space: normal; //nu_edit
 
 	&:active {
 		box-shadow: none;
@@ -39,6 +41,10 @@
 	&.btn-blue-light {
 		background: $color-blue-light;
 		color: $color-white;
+
+		&.member-sign {
+			margin-bottom: 100px;
+		}
 
 		&:hover {
 			background: $color-blue-med;
